--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,5 @@
-/*  your css code here. If applicable */
+/*  your css code here. If applicable */ h1 {
+            color: #000;
+            font-size: 2.5rem;
+            text-align: center;
+        }
