--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,13 @@
-  h1 {
+     body {
+            margin: 0;
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #ffffff;
+        }
+h1 {
             color: #000;
             font-size: 2.5rem;
         }
