--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
             margin: 0;
             min-height: 100vh;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            /* justify-content: center;
+            align-items: center; */
             font-family: Arial, Helvetica, sans-serif;
             background-color: #ffffff;
         }
